plan3.txt
Wait, let's think again.
If `-F .../ios/Flutter` is being passed, the module is there.
Why did `no such module 'Flutter'` ONLY happen for `path_provider_foundation` and `shared_preferences_foundation`?
Let's look closely at `test_crlf5.rb` from the previous plan when I ran my regex on `path_provider_foundation/messages.g.swift`:
```
// Autogenerated from Pigeon (v26.1.0), do not edit directly.

import Foundation

#if os(iOS) || os(tvOS)
  import Flutter
#elseif os(macOS)
  import FlutterMacOS
#endif
```
This is CORRECT! It DID get patched.
But why does it say "no such module 'Flutter'"?
Wait... if the file was patched, but Xcode still fails with "no such module 'Flutter'", it means the compiler couldn't find the Flutter module.
But wait! Look at the error message again!
```
/Users/runner/.pub-cache/hosted/pub.dev/path_provider_foundation-2.5.1/darwin/path_provider_foundation/Sources/path_provider_foundation/messages.g.swift:10:10: error: no such module 'Flutter'
  import Flutter
         ^
```
Wait! Is it possible that `path_provider_foundation` is NOT getting the `FRAMEWORK_SEARCH_PATHS` updated?
Let's check `tvos/Podfile`:
```ruby
  installer.pods_project.targets.each do |target|
    flutter_additional_ios_build_settings(target)
    target.build_configurations.each do |config|
      # set framework search path
      flutter_dir = File.expand_path('..', $PROJECT_DIR) + '/ios/Flutter'
      config.build_settings['FRAMEWORK_SEARCH_PATHS'] = '"' + flutter_dir + '" $(inherited)'
```
Wait! `path_provider_foundation-2.5.1` is a CocoaPod. Does it have multiple targets?
Yes, maybe it has a `path_provider_foundation` target and a `path_provider_foundation-path_provider_foundation_privacy` target?
Wait, if `-F .../ios/Flutter` is in the compile command for `path_provider_foundation`, why does it not find `Flutter`?
Is there something in `path_provider_foundation`'s `modulemap`?
What if `Flutter` is not in the `-I` paths, but only `-F`? `import Flutter` should work if `-F` has the framework.
Wait! `url_launcher_ios` works, but `path_provider_foundation` fails.
Why?
Let's check what `url_launcher_ios` has in its `Package.swift` or podspec.
Wait... what if `path_provider_foundation` was NOT patched during the build?
Let's look at the GitHub Actions logs.
```
Patching (Flutter import) /Users/runner/.pub-cache/hosted/pub.dev/path_provider_foundation-2.5.1/darwin/path_provider_foundation/Sources/path_provider_foundation/messages.g.swift
```
Wait, did it say that in the GitHub Actions logs? I don't have the `pod install` logs, I only have the `xcodebuild` logs.
But wait... if `path_provider_foundation` WAS NOT patched, it would have failed with:
```
#error("Unsupported platform.")
```
Because the unpatched version has:
```swift
#if os(iOS)
  import Flutter
#elseif os(macOS)
  import FlutterMacOS
#else
  #error("Unsupported platform.")
#endif
```
If it failed with `no such module 'Flutter'` AT LINE 10:
Line 10 is `import Flutter`.
Wait... if it is unpatched, for `os(tvOS)`, `os(iOS)` is false. `os(macOS)` is false. It goes to `#else` and hits `#error("Unsupported platform.")` at line 14.
BUT IT FAILED AT LINE 10 WITH "no such module 'Flutter'"!
This means `os(iOS)` MUST BE TRUE!
Wait, what??
If `os(iOS)` is true, then `import Flutter` is executed!
Why would `os(iOS)` be true when building for tvOS?!
Because tvOS IS a subset of iOS in some Swift contexts? No, `os(tvOS)` and `os(iOS)` are mutually exclusive.
Wait, let me search Swift docs. "os(iOS) evaluates to true on iOS. Does os(iOS) evaluate to true on tvOS?"
No, in Swift, `os(iOS)` is false on tvOS.
Wait, unless the module is built with an iOS SDK!
Look at the clang/swiftc arguments:
`-target arm64-apple-tvos15.0 -sdk /Applications/Xcode_16.4.app/Contents/Developer/Platforms/AppleTVOS.platform/Developer/SDKs/AppleTVOS18.5.sdk`
This is definitely tvOS! So `os(iOS)` should be false.
Wait... IF IT WAS PATCHED:
```swift
#if os(iOS) || os(tvOS)
  import Flutter
```
Then `import Flutter` is at line 10!
If it was NOT patched, `import Flutter` is at line 10!
If it was NOT patched, it would ALSO hit `#error("Unsupported platform.")` at line 14.
Did it hit line 14? The log only shows:
```
/Users/runner/.pub-cache/hosted/pub.dev/path_provider_foundation-2.5.1/darwin/path_provider_foundation/Sources/path_provider_foundation/messages.g.swift:10:10: error: no such module 'Flutter'
  import Flutter
```
It doesn't show the `#error`! So it WAS patched!
Okay, so the patch IS working.
The problem is `error: no such module 'Flutter'`.
WHY does it not find `Flutter` if `-F .../ios/Flutter` is there?
